footer and three content

--- a/freelancer/Views/Partials/mainNavigation.cshtml
+++ b/freelancer/Views/Partials/mainNavigation.cshtml
@@ -1,4 +1,6 @@
-﻿@inherits UmbracoViewPage
+﻿using Freelancer.Extenstions
+@inherits UmbracoViewPage
+
 
 @{
     var siteSettings = Model.GetSiteSettings();
@@ -18,4 +20,4 @@
             </ul>
         </div>
     </div>
-</nav>B
+</nav>
